RESOLVED FIXED60478
Fix build in WebCore/xml/XSLTProcessorLibxslt.cpp
https://bugs.webkit.org/show_bug.cgi?id=60478
Summary Fix build in WebCore/xml/XSLTProcessorLibxslt.cpp
Ben Murdoch
Reported 2011-05-09 09:54:04 PDT
XSLTProcessorLibxslt.cpp needs is missing an include of CString.h. patch to follow.
Attachments
Patch (1.04 KB, patch)
2011-05-10 02:37 PDT, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2011-05-10 02:37:32 PDT
Created attachment 92932 [details] Patch Patch. Looks like r54495 introduced a dependency on CString yet r73679 removed the include.
Steve Block
Comment 2 2011-05-10 05:09:13 PDT
Comment on attachment 92932 [details] Patch r=me
WebKit Commit Bot
Comment 3 2011-05-10 05:33:58 PDT
Comment on attachment 92932 [details] Patch Clearing flags on attachment: 92932 Committed r86144: <http://trac.webkit.org/changeset/86144>
WebKit Commit Bot
Comment 4 2011-05-10 05:34:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.