2011-05-10  Ben Murdoch  <benm@google.com>

Reviewed by Steve Block.

        Fix build in WebCore/xml/XSLTProcessorLibxslt.cpp
        https://bugs.webkit.org/show_bug.cgi?id=60478

        No new tests), build fix only.

        * xml/XSLTProcessorLibxslt.cpp: Add CString.h include.

Canonical link: https://commits.webkit.org/75808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86144 268f45cc-cd09-0410-ab3c-d52691b4dbfc